<?xml version="1.0"?>
<package format="3">
  <name>vision_nav</name>
  <version>0.1.0</version>
  <description>Vision-based crop row navigation</description>
  <maintainer email="mohtasimhadi@gmail.com">Mohtasim Hadi Rafi</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ros_gz_bridge</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
